feat: added job sparks